# python-project-50

./: .coverage  Makefile  README.md  json.cast  plain.cast  pyproject.toml  step4.cast  stylish.cast
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  compare_data_json.py  compare_data_yaml.py  constants.py  core.py  diff_builder.py  formatter.py  formatter_selector.py  generate_diff.py  generate_diff_json.py  generate_diff_yaml.py  read_json.py  read_yaml.py  utils.py
gendiff/formatter/: format_json.py  format_plain.py  format_stylish.py
gendiff/scripts/: gendiff.py  read_json.py
tests/: test_gendiff.py
tests/fixtures/: result_json.txt
